--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Get Better At Guitar",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node_modules\\.bin\\nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/JordanBourne/GuitarTrainer/issues"
   },
-  "homepage": "https://github.com/JordanBourne/GuitarTrainer#readme"
+  "homepage": "https://github.com/JordanBourne/GuitarTrainer#readme",
+  "dependencies": {
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^1.0.0",
+    "express-session": "^1.15.6",
+    "jwks-rsa": "^1.3.0",
+    "nodemon": "^1.18.9",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.1.0"
+  }
 }
